# Human-Mental-Imagery-from-Brain

./: .gitignore  README.md  pyproject.toml  requirements.txt
imagine/: __init__.py  cli.py  config.py  data.py  pipeline.py  preprocessing.py
imagine/branches/: __init__.py  c_lda.py  peak.py
tests/: test_pipeline.py
tests/fixtures/: test_sub01_expected.json  train_sub02_expected.json
