[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagine-research-pipeline"
version = "0.1.0"
description = "Research-oriented IMAGINE MEG mental imagery decoding pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mne>=1.11,<2",
    "numpy>=2.2,<3",
    "pandas>=2.3,<3",
    "scikit-learn>=1.7,<2",
    "scipy>=1.15,<2",
]

[tool.setuptools]
packages = ["imagine", "imagine.branches"]
